@@ -176,7 +176,6 @@ private:
 	void DiffSelectedFile();
 	void DiffSelectedRevWithPrevious();
 	void SetDlgTitle(bool bOffline);
-	CString GetAbsoluteUrlFromRelativeUrl(const CString& url);
 	void ToggleCheckbox(size_t item);
 
 	inline int ShownCountWithStopped() const { return (int)m_logEntries.GetVisibleCount() + (m_bStrictStopped ? 1 : 0); }
